--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
 
 </head>
-  <title>Health 24/7</title></head>
+  <title>Be My Eyes</title></head>
 <body >
     <center>
     <input id="code" ><br>
