--- a/videocll.html
+++ b/videocll.html
@@ -9,5 +9,6 @@
   <iframe allow="camera; microphone; fullscreen; speaker; display-capture"
 src="https://bemyeye.yourvideo.live/62f0fdc724b38b792a08ac5f">
 </iframe>
+<script src = main.js></script>
 </body>
 </html>
