--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
 
 </head>
-  <title>Be My Eyes</title></head>
+  <title>Health 24/7</title></head>
 <body >
     <center>
     <input id="code" ><br>
     <button class="btn btn-danger" id="submit" onclick="Checkforcode()">Join Meeting</button>
     <h3 id="result" ></h3>
     </center>
+
+  <script src="main.js"></script>
 </body>
 
 </html>
