--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
 
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 </head>
-  <title>Health 24/7</title></head>
-<body >
-    <center>
-    <input id="code" ><br>
-    <button class="btn btn-danger" id="submit" onclick="Checkforcode()">Join Meeting</button>
-    <h3 id="result" ></h3>
-    </center>
-
-  <script src="main.js"></script>
+  <title>Be My Eyes</title></head>
+<body onload = "checkifverified()">
+  <iframe allow="camera; microphone; fullscreen; speaker; display-capture"
+src="https://bemyeye.yourvideo.live/62f0fdc724b38b792a08ac5f">
+</iframe>
+<script src = main.js></script>
 </body>
 
 </html>
