--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 </head>
   <title>Be My Eyes</title></head>
-<body onload = "checkifverified()">
+<body>
   <iframe allow="camera; microphone; fullscreen; speaker; display-capture"
 src="https://bemyeye.yourvideo.live/62f0fdc724b38b792a08ac5f">
 </iframe>
