--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
 
+  <head>
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+<script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
+
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+</head>
   <title>Be My Eyes</title></head>
 <body>
   <iframe allow="camera; microphone; fullscreen; speaker; display-capture"
