--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <title>Be My Eyes</title></head>
 <body>
   <iframe allow="camera; microphone; fullscreen; speaker; display-capture"
+allowfullscreen	= true
 src="https://bemyeye.yourvideo.live/62f0fdc724b38b792a08ac5f">
 </iframe>
 <script src = main.js></script>
