--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
 <html>
-
-  <head>
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-<script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
-
+  
 <head>
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>full screen iframe</title>
+    <style type="text/css">
+        html {
+            overflow: auto;
+        }
+          
+        html,
+        body,
+        div,
+        iframe {
+            margin: 0px;
+            padding: 0px;
+            height: 100%;
+            border: none;
+        }
+          
+        iframe {
+            display: block;
+            width: 100%;
+            border: none;
+            overflow-y: auto;
+            overflow-x: hidden;
+        }
+    </style>
 </head>
-  <title>Be My Eyes</title></head>
+  
 <body>
-  <iframe allow="camera; microphone; fullscreen; speaker; display-capture"
-allowfullscreen	= true
-src="https://bemyeye.yourvideo.live/62f0fdc724b38b792a08ac5f">
-</iframe>
-<script src = main.js></script>
+    <iframe allow="camera; microphone; fullscreen; speaker; display-capture"
+            src="https://bemyeye.yourvideo.live/62f0fdc724b38b792a08ac5f"
+            frameborder="0" 
+            marginheight="0" 
+            marginwidth="0" 
+            width="100%" 
+            height="100%" 
+            scrolling="auto">
+  </iframe>
+  
 </body>
-
+  
 </html>
