--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
   
 <head>
-    <title>full screen iframe</title>
-    <style type="text/css">
+    <title>Be My Eyes</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
+   <style type="text/css">
         html {
             overflow: auto;
         }
