--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Be My Eyes</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="fullscreen" />
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <script src="https://thunkable.github.io/webviewer-extension/thunkableWebviewerExtension.js" type="text/javascript"></script>
    <style type="text/css">
